--- a/web_google_maps_drawing/views/res_config_settings.xml
+++ b/web_google_maps_drawing/views/res_config_settings.xml
@@ -3,7 +3,7 @@
     <record id="res_config_settings_view_form" model="ir.ui.view">
         <field name="name">res.config.settings.view.form.inherit.web_google_maps_drawing</field>
         <field name="model">res.config.settings</field>
-        <field name="inherit_id" ref="web_google_maps.res_config_settings_view_form" />
+        <field name="inherit_id" ref="base_setup.res_config_settings_view_form"/>
         <field name="arch" type="xml">
             <xpath expr="//div[@name='web_google_maps']/div[last()]" position="inside">
                 <div class="col-xs-12 col-md-6 o_setting_box">
@@ -22,3 +22,4 @@
         </field>
     </record>
 </odoo>
+
